--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
     <meta charset="UTF-8">
@@ -23,6 +24,11 @@
         <a href="https://github.com/AMWA-TV/nmos">GITHUB</a>
         <a href="https://github.com/AMWA-TV/nmos/wiki">WIKI</a>
         <a href="https://github.com/AMWA-TV/nmos/wiki/FAQ">FAQs</a>
+        <span class="dropdown">TOOLS...
+          <div class="dropdown-content">
+            <p><a href="https://amwa-tv.github.io/nmos-testing">API Testing Tool</a></p>
+          </div>
+        </span>
         <span class="dropdown">IS-XX...
           <div class="dropdown-content">
             <p><a href="https://amwa-tv.github.io/nmos-discovery-registration">IS-04 Discovery & Registration</a></p>
@@ -40,6 +46,12 @@
             <p><a href="https://amwa-tv.github.io/nmos-grouping">BCP-002 Grouping</a></p>
             <p><a href="https://amwa-tv.github.io/nmos-api-security">BCP-003 API Security</a></p>
             <p><a href="https://amwa-tv.github.io/nmos-parameter-registers">Parameter Registers</a></p>
+          </div>
+        </span>
+        <span class="dropdown">SEARCH
+          <div class="dropdown-content">
+              <script async src="https://cse.google.com/cse.js?cx=004212447740789395294:1oujtmtgsky"></script>
+              <div class="gcse-searchbox-only"></div>
           </div>
         </span>
       </div>
